src/test/ui/issues/issue-50581.stderr
error[E0268]: `break` outside of loop
  --> $DIR/issue-50581.rs:2:14
   |
LL |     |_: [u8; break]| ();
   |              ^^^^^ cannot break outside of a loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0268`.
