src/test/ui/issues/issue-50581.rs
fn main() {
    |_: [u8; break]| (); //~ ERROR [E0268]
}
